// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@keen.io/charts - scale utils generateTicks() should create ticks for horizontal Utc scale 1`] = `
Array [
  Object {
    "size": 10,
    "text": 2020-01-01T00:00:00.000Z,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 2020-02-01T00:00:00.000Z,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 2020-03-01T00:00:00.000Z,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 2020-04-01T00:00:00.000Z,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 2020-05-01T00:00:00.000Z,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 2020-06-01T00:00:00.000Z,
    "x": 0.5,
    "y": 0,
  },
]
`;

exports[`@keen.io/charts - scale utils generateTicks() should create ticks for horizontal band scale 1`] = `
Array [
  Object {
    "size": 10,
    "text": "Sales",
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": "Marketing",
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": "E-commerce",
    "x": 0.5,
    "y": 0,
  },
]
`;

exports[`@keen.io/charts - scale utils generateTicks() should create ticks for horizontal linear scale 1`] = `
Array [
  Object {
    "size": 10,
    "text": 0,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 10,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 20,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 30,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 40,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 50,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 60,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 70,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 80,
    "x": 0.5,
    "y": 0,
  },
  Object {
    "size": 10,
    "text": 90,
    "x": 0.5,
    "y": 0,
  },
]
`;

exports[`@keen.io/charts - scale utils generateTicks() should create ticks for vertical band scale 1`] = `
Array [
  Object {
    "size": 10,
    "text": "Sales",
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": "Marketing",
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": "E-commerce",
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 14,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 14,
    "x": 0,
    "y": -0.5,
  },
]
`;

exports[`@keen.io/charts - scale utils generateTicks() should create ticks for vertical linear scale 1`] = `
Array [
  Object {
    "size": 10,
    "text": 0,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 10,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 20,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 30,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 40,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 50,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 60,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 70,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 80,
    "x": 0,
    "y": -0.5,
  },
  Object {
    "size": 10,
    "text": 90,
    "x": 0,
    "y": -0.5,
  },
]
`;
